--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Righteous&family=Sarala:wght@400;700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .fs-16
 {
   font-size: 16pt;
@@ -7,17 +13,14 @@
 
 a {
   cursor: pointer;
+  text-decoration: none;
 }
 
 #navbar {
-  background-color: #a8bdbe;
   overflow-x: hidden;
   width: 100vw;
-}
-
-#navbar {
-    display: flex;
-    gap: 32px;
+  display: flex;
+  gap: 32px;
 }
 
 #cabecalho-img {
@@ -26,8 +29,8 @@ a {
 }
 
 #cabecalho-item {
-  font-family: 'Sarala', sans-serif;
-  color: #FFF2E7;
+  font-family: 'Sarala', sans-serif !important;
+  color: #756E6E !important;
   font-weight: 400;
   font-size: 18px;
 }
