Configuração cores e postagens

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-between">
 
     <!-------------------------------primeira col------------------------------------>
-    <div class="col-md-3 d-flex flex-column bg-light sticky-top" id="firstcol">
+    <div class="col-md-3 d-flex flex-column bg-light mt-0">
 
     </div>
 
@@ -11,12 +11,13 @@
     <div class="col-md-6">
 
       <div class="container">
-        <div class="row d-flex align-items-center">
-          <div class="container col-md-12 ml-0 mr-auto p-0 row d-flex align-items-center">
-            <div class="card mt-4 mb-2 d-flex justify-content-start col-md-10 mr-auto card-config">
+        <div class="mt-3 row d-flex align-items-center d-flex justify-content-center">
+          <div class="col-md-1"></div>
+          <div class="container col-md-10 ml-0 mr-auto p-0 row d-flex align-items-center justify-content-between">
+            <div class="card mt-4 mb-2 d-flex justify-content-start col-md-10 card-config">
               <div class="card-body">
                 <div class="row mb-3">
-                  <div class="col-md-2 d-flex align-items-start justify-content-start">
+                  <div class="col-md-3 d-flex align-items-start justify-content-start">
                     <img src="{{foto}}" alt="Foto de usuario" width="50px" height="50px"
                       class="img-fluid rounded-circle">
                   </div>
@@ -160,7 +161,7 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade show active" id="postagemTema" role="tabpanel"
+            <!-- <div class="tab-pane fade show active" id="postagemTema" role="tabpanel"
               aria-labelledby="nav-postagemTema-tab">
               <div class="card text-center my-3" *ngFor="let item of listaPostagens">
                 <div class="container mr-3">
@@ -209,7 +210,7 @@
 
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
 
