--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small pt-4" id="footer">
+<footer class="page-footer font-small pt-4 btn-modal">
 
   <div class="container">
     
