--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light p-4 row border-bottom shadow-sm p-3 mb-5 bg-white rounded" id="navbar">
+<nav class="navbar navbar-expand-lg navbar-light p-4 row border-bottom shadow-sm p-3 bg-white rounded" id="navbar">
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <img src="/assets/rede_tec-logo-removebg.png" alt="logo redetec" class="img-fluid rounded-circle ml-5" id="cabecalho-img">
@@ -22,7 +22,7 @@
       </li>
 
       <li class="nav-item pl-3">
-        <a (click)="sair()" class="m-0 font-weight-bold fs-16 mr-4" id="cabecalho-item">Sair
+        <a (click)="sair()" class="fs-16 m-0 font-weight-bold mr-4" id="cabecalho-item">Sair
         </a>
       </li>
     </ul>
