--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,170 +1,220 @@
-<div class="col-md-12">
+<div class="container-fluid bg-fluid p-0">
+<div class="col-md-12 m-0 p-0">
   <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-          <a class="navbar-brand " href="#">
-              <img src="assets/rede_tec-logo-removebg.png" alt="logo" width="102" height="92">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse  " id="navbarNav">
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a class="nav-link active font-weight-bold text-secondary " aria-current="page"
-                          href="#">Quem somos</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link font-weight-bold text-secondary " href="#">Contato</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link font-weight-bold text-secondary" href="#">O que é RedeTec</a>
-                  </li>
-
-                  <li class="nav-item pl-3 d-flex align-items-center">
-                    <!--(click)="Entrar()"-->
-                      <a class="m-0 fw-bold text-secondary fs-16 ">Entrar<img
-                              src="assets/icons8-enter-48.png"> <i> class="navbar-toggler-icon"></i>
-                          </a>
-                  </li>
-              </ul>
-
-
-
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img
+          src="https://i.imgur.com/I6onXnD.png"
+          alt="logo"
+          width="102"
+          height="92"
+        />
+      </a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse d-flex align-items-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a
+              class="nav-link active font-weight-bold text-secondary"
+              aria-current="page"
+              href="#conteudo"
+              >O que é RedeTec</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold text-secondary" href="#sobrenos"
+              >Quem somos</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link font-weight-bold text-secondary" href="#cards"
+              >Contato</a
+            >
+          </li>
+        
+        </ul>
+        <div class="nav-item pl-3 d-flex justify-content-end ml-auto">
+        <a class="font-weight-bold text-secondary fs-16" routerLink="/login"
+              >Entrar<img src="https://i.imgur.com/YzBTtCs.png" />
+              <i class="navbar-toggler-icon"></i>
+            </a>
           </div>
       </div>
+    </div>
+    </nav>
+    </div>
 
-<div class="container-fluid bg-light">
-
-<div class="row bg-light d-flex align-items-center">
-  <div class="col-md-6">
-      <div class="row d-flex justify-content-center">
-          <div class="col-md-6 text-secondary">
-              <h1 class="fs-44"> A sua Rede de ensino em programação!</h1>
-              <h5 class="fs-15"> Mostramos que podemos ser muito mais humanos
-
-                  quando unimos empatia e tecnologia</h5>
-
-          </div>
-      </div>
-
-      <div class="row d-flex justify-content-center mt-3 mb-5">
+    <!--Conteudo-->
+    <div class="row" id="conteudo">
+      <div class="container-fluid bg-light">
+        <div class="row bg-light d-flex align-items-center">
           <div class="col-md-6">
-              <button class="btn btn-outline-secondary mr-2" data-toggle="modal"
-                  data-target="#exampleModal">Trilhas</button>
-              <a class="btn btn-outline-secondary" href="#postagens"> Ver Postagens</a>
+            <div class="row d-flex justify-content-center">
+              <div class="col-md-6 text-secondary">
+                <h1 class="fs-44">A sua Rede de ensino em programação!</h1>
+                <h5 class="fs-15">
+                  Mostramos que podemos ser muito mais humanos quando unimos
+                  empatia e tecnologia
+                </h5>
+              </div>
+            </div>
+  
+            <div class="row d-flex justify-content-center mt-3 mb-5">
+              <div class="col-md-6">
+                <button
+                  class="btn btn-outline-secondary mr-2"
+                  data-toggle="modal"
+                  data-target="#exampleModal"
+                >
+                  Trilhas
+                </button>
+                <a class="btn btn-outline-secondary" href="#postagens">
+                  Ver Postagens</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!--Configuração imagem-->
+          <div class="col-md-6 d-flex justify-content-center">
+            <img
+              src="https://i.imgur.com/eOCZgi8.png"
+              alt=""
+              width="500px"
+              height="500px"
+            />
+          </div>
+          <div></div>
+        </div>
+      </div>
+  
+      <p></p>
+      <div></div>
+  
+    </div>
+
+    <!--Sobre nós-->
+
+    <div class="d-flex justify-content-center mt-5" id="sobrenos">
+      <div class="row bg-light d-flex align-items-center justify-content-center">
+        <div class="col-md-6">
+          <div class="row d-flex justify-content-center align-items-center">
+
+            <!--Configuração de imagem 2-->
+            <div class="col-md-6 d-flex justify-content-center">
+              <img
+                src="https://i.imgur.com/C1SYY3v.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 d-flex justify-content-center">
+          <!-- <div class="row d-flex justify-content-center align-items-center"> -->
+            <div class="col-md-8 text-secondary flex-column justify-content-center ">
+              
+              <div class="d-flex justify-content-center">
+              <img
+              src="https://i.imgur.com/I6onXnD.png"
+              alt=""
+              width="200"
+              height="200"/>
+            </div>
+            <div class="">
+              <h1 class="fs-54 d-flex justify-content-center">Sobre nós</h1>
+              <h3 class="fs-18 d-flex justify-content-center">
+                O projeto RedeTec foi desenvolvido durante o bootcamp de 12
+                semanas da Generation Brasil.
+              </h3>
+            </div>
+            </div>
+          <!-- </div> -->
+        </div>
+      </div>
+    </div>
+  </div>
+    <!-- </div> -->
+
+    <!--Conteudo de Cards-->
+    <div class="row bg-light my-5" id="cards">
+      <div class="card-group mt-5 d-flex justify-content-around">
+        <div class="card col-md-3 card-r">
+          <h5 class="card-title d-flex justify-content-center">CONTEÚDO</h5>
+          <img
+            src="https://i.imgur.com/It61WfS.png"
+            class="card-img-top"
+            alt="..."
+            width="200"
+            height="270"
+          />
+          <div class="card-body">
+            <p class="card-text">Atividades, projetos, e-books e muito mais!</p>
+            
+          </div>
+        </div>
+        <div class="card col-md-3">
+          <h5 class="card-title d-flex justify-content-center">MONITORIAS</h5>
+  
+          <img
+            src="https://i.imgur.com/akEy5Gv.png"
+            class="card-img-top"
+            alt="..."
+            width="200"
+            height="270"
+          />
+          <div class="card-body">
+            <p class="card-text">
+              This card has supporting text below as a natural lead-in to
+              additional content.
+            </p>
+
           </div>
       </div>
-
-  </div>
-  <div class="col-md-6  d-flex justify-content-center">
-      <img src="assets/casual-life-3d-girl-and-boy-sitting-with-laptop-1.png" alt="" width="500px" height="500px">
-  </div>
-  <div></div>
-
-
-</div>
-</div>
-
-<p>
-
-</p>
-<div>
-
-</div>
-
-<!--Sobre nós-->
-
-<div class="container-fluid bg-light">
-<div class="row bg-light d-flex align-items-center">
-  <div class="col-md-6">
-      <div class="row d-flex justify-content-left">
-          <div class="col-md-6 text-secondary mt-5">
-              <img src="assets/casual-life-3d-girl-with-tablet-and-working-process-on-desktop.png" alt="">
-
+      <div class="card col-md-3">
+          <h5 class="card-title d-flex justify-content-center">OPORTUNIDADES</h5>
+  
+          <img
+          src="https://i.imgur.com/l0K5EOZ.png"
+          class="card-img-top"
+          alt="..."
+          width="200"
+          height="270"
+          />
+          <div class="card-body">
+          <p class="card-text">
+              Vagas e oportunidades divulgadas dentro da plataforma
+          </p>
+          
+          </div>
           </div>
       </div>
-  </div>
-  <div class="col-md-6">
-      <div class="row d-flex justify-content-center">
-          <div class="col-md-6 text-secondary mt-5">
-              <img src="assets/rede_tec-logo-removebg.png" alt="" width="200" height="200">
-              <h1 class="fs-54  justify-content-center "> Sobre nós</h1>
-              <h3 class="fs-50 "> O projeto RedeTec foi desenvolvido durante o bootcamp de 12 semanas da Generation Brasil.</h3>
+    </div>
 
-          </div>
-      </div>
-  </div>
-
-
+    <!--Rodape-->
+    <div class="col-md-12 m-0 p-0 page-footer font-small pt-4 btn-modal">
+      <hr class="m-0 p-0" />
+    <footer class="">
+        <div class="row mb-3">
+        <div class="col-md-12 d-flex justify-content-center align-items-center">
+            
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <p class="text-center">
+            Todos os direitos reservados: RedeTec &copy;
+            </p>
+        </div>
+    </div>
+    </footer>
 </div>
-</div>
-
-<!--Cards-->
-
-<div class="card-group mt-5">
-<div class="card">
-  <h5 class="card-title d-flex justify-content-center">CONTEÚDO</h5>
-  <img src="assets/casual-life-3d-young-woman-imagining-things-while-reading-e-book.png" class="card-img-top"
-      alt="...">
-  <div class="card-body">
-      <p class="card-text">Atividades, projetos, e-books
-
-          e muito mais!</p>
-      <a href="#" class="btn btn-outline-secondary d-flex justify-content-center"> Veja Conteúdo</a>
-  </div>
-</div>
-<div class="card ">
-  <h5 class="card-title d-flex justify-content-center">MONITORIAS</h5>
-
-  <img src="assets/casual-life-3d-girl-and-man-reading-book-and-smiling.png" class="card-img-top" alt="..."
-      width="350" height="300">
-  <div class="card-body">
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-outline-secondary d-flex justify-content-center"> Ir para monitoria</a>
-  </div>
-</div>
-<div class="card">
-  <h5 class="card-title d-flex justify-content-center">MANUAIS</h5>
-
-  <img src="assets/casual-life-3d-lamp-books-and-objects-for-studying.png" class="card-img-top" alt="...">
-  <div class="card-body">
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-          content. This card has even longer content than the first to show that equal height action.</p>
-      <a href="#" class="btn btn-outline-secondary d-flex justify-content-center"> Veja Conteúdo</a>
-  </div>
-</div>
-</div>
-<!--/Cards-->
-
-
-
-<!--Rodapé-->
-<hr>
-<footer>
-
-<div class="row mb-3">
-<div class="col-md-12 d-flex justify-content-center">
-
-  <a href="https://www.linkedin.com/feed/" target="_blank" class="p-3">
-      <img class="tm-social " src="assets/icons8-linkedin-circled-30.png" alt="logo do linkedin">
-  </a>
-
-  <a href="" target="_blank" class="p-3">
-      <img class="tm-social " src="assets/icons8-github-24.png" alt="logo do github">
-  </a>
-
-
-
-</div>
-</div>
-<div class="row">
-<div class="col-md-12">
-  <p class="text-center">
-      Todos os direitos reservados: RedeTec &copy;
-  </p>
-</div>
-</div>
-
-
-</footer>
