--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -38,7 +38,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link font-weight-bold text-secondary" href="#cards"
-              >Contato</a
+              >Conteúdo</a
             >
           </li>
         
