--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -70,18 +70,7 @@
             </div>
   
             <div class="row d-flex justify-content-center mt-3 mb-5">
-              <div class="col-md-6">
-                <button
-                  class="btn btn-outline-secondary mr-2"
-                  data-toggle="modal"
-                  data-target="#exampleModal"
-                >
-                  Trilhas
-                </button>
-                <a class="btn btn-outline-secondary" href="#postagens">
-                  Ver Postagens</a
-                >
-              </div>
+  
             </div>
           </div>
 
@@ -174,8 +163,7 @@
           />
           <div class="card-body">
             <p class="card-text">
-              This card has supporting text below as a natural lead-in to
-              additional content.
+              Apoio no inicio da carreira, com profissionais da área ou de outras áreas.
             </p>
 
           </div>
