--- a/src/app/edit/user-edit/user-edit.component.html
+++ b/src/app/edit/user-edit/user-edit.component.html
@@ -1,10 +1,11 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-md-12">
-            <h1 class="text-center text-secondary">Atualizar meu usuário</h1>
+        <div class="col-md-12 my-4 d-flex justify-content-center">
+            <div class="col-md-8 d-flex justify-content-center flex-wrap">
+            <h1 class="text-center text-secondary col-md-12">Atualizar meu usuário</h1>
 
-            <form >
+            <form class="col-md-12" >
                 <div class="form-group">
                     <label for="nome">Nome</label>
                     <input [(ngModel)]='usuario.nome' name="nome" class="form-control" type="text" placeholder="Seu nome">
@@ -17,6 +18,11 @@
                     <label for="imagem">Foto</label>
                     <input [(ngModel)]='usuario.foto' class="form-control" type="text" name="foto" placeholder="Insira o link da foto">
                 </div>
+
+                <div class="d-flex justify-content-center">
+                        <img src="{{usuario.foto}}" alt="" class="img-fluid foto-size mb-3" width="40%" height="40%">
+                </div>
+
                 <div class="form-group">
                     <label for="senha">Senha</label>
                     <input (input)="confirmSenha($event)" name="senha" class="form-control" type="password" placeholder="Insira uma senha de no mínimo 8 caracteres">
@@ -40,7 +46,7 @@
                     <button class="btn btn-success w-25" (click)="atualizar()">Atualizar</button>
                 </div>
             </form>
-
+            </div>
         </div>
 
     </div>
