--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -4,44 +4,75 @@
     
     <div class="row">
       <div class="col-md-12 d-flex justify-content-center" >
-        <h4 class="text-white">Contatos:</h4>
+        <h3 class="text-white">CONTATOS</h3>
+        <br>
+        <br>
       </div>
     </div>
 
-  <div class="row">
-    <div class="col-md-12 d-flex justify-content-center">
+  <div class="row d-flex justify-content-around">
+    
 
       <ul class="social-network d-flex">
-
-        <li>
-          <a target="_blank" class="iconEmail">
-          <i class="fa fa-envelope-o" aria-hidden="true"></i>
-          <h6 class="text-white">redetecpe@gmail.com</h6>
+        
+        <li class="d-flex mx-8">
+          <a target="_blank" class="">
+          <i class="" aria-hidden="true"></i>
+          <h5 class="d-flex ml-5">RedeTec</h5>
+          <br>
+          <h6 class="text-white">Rede social dedicada à inserção </h6> 
+            <h6>de jovens e adultos no mercado</h6> 
+            <h6>de tecnologia.</h6>
         </a>
         </li>
+    
+        <div class="d-flex mx-5">
+         
+          <li>
+            <i class="fa fa-group mx-4" aria-hidden="true"></i>
+            <br>
+            <br>
+          <a href="https://www.linkedin.com/in/eveline-síntia/" target="_blank" class="iconEveline">
+            <h6 id="link">Eveline Síntia</h6>
+           </a>
+          <a href=" https://www.linkedin.com/in/joara-p-de-gouveia-aa4038168/" target="_blank" class="iconJoara">
+            <h6 id="link">Joara Paula</h6>
+           </a>         
+          <a href="https://www.linkedin.com/in/laura-lima-araujo/" target="_blank" class="iconLaura">
+            <h6 id="link">Laura Araújo</h6>
+          </a>
+          <a href="https://www.linkedin.com/in/lisandra-dias/" target="_blank" class="iconLisandra">
+            <h6 id="link">Lisandra Dias</h6>
+          </a>
+          <a href="https://www.linkedin.com/in/olga-beatriz-silva-283060144/" target="_blank" class="iconOlga">
+            <h6 id="link">Olga Beatriz</h6>
+          </a>
+          <a href="https://www.linkedin.com/in/rutehelencosta/" target="_blank" class="iconRute">
+            <h6 id="link">Rute Helen</h6>
+          </a>
+          <a href="https://www.linkedin.com/in/thayslimeira/" target="_blank" class="iconThays">
+            <h6 id="link">Thays Limeira</h6>
+          </a>
+      </li>
+    </div>
 
-        <li>
-          <a target="_blank" class="iconInstagram">
-          <i class="fa fa-phone" aria-hidden="true"></i>
-          <h6 class="text-white">+55 (xx) xxxxx-xxxx</h6>
-         </a>
-        </li>
+   
+      <li>
+        <a target="_blank" class="iconEmail">
+        <i class="fa fa-envelope d-flex justify-content-center" aria-hidden="true"></i>
+        <br>
+        <h6 class="text-white">redetecpe@gmail.com</h6>
+      </a>
+      </li>
+   
 
-        <li>
-          <a target="_blank" class="iconGithub">
-          <i class="fa fa-map-marker" aria-hidden="true"></i>
-          <h6 class="text-white"> 
-             <P>Rua: Av Bernardo Vieira</P>
-             <P>de Melo, 123, Candeiras,</P>
-             <P>Jaboatão dos Guararapes -PE</P> 
-          </h6>
-        </a>
-        </li>
+
+   
       </ul>
 
     </div>
   </div>
-</div>
+
 
 </footer>
 
