--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -86,7 +86,7 @@ button:focus path{
 }
 
 .btn-modal{
-  background-color: rgba(108, 51, 241, 0.7);
+  background-color: #8e8a8f;
   color: white;
 }
 
@@ -94,9 +94,9 @@ button:focus path{
   background:none;
   color:black;
   border: 5px;
-  border-color: rgba(108, 51, 241, 0.7);
+
 }
-
-
-
+#bg{
+  background-color: #a49ba8;
+}
 
