--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,8 @@
 
-    <div class="d-flex justify-content-center align-items-center flex-row centro">
+    <div class="d-flex justify-content-center align-items-center flex-row centro" id="imagemdefundo">
+     
+     
+     
       <div class="container col-md-5">
         <div class="align-items-center justify-content-center card card-body shadow p-3 mb-5">
           <div class="col-md-9 justify-content-center mt-2">
@@ -7,7 +10,7 @@
             <h6 class="text-center">Faça parte da comunidade que te ajuda a crescer!</h6>
             <div class="form-group">
               <label for="usuario">E-mail</label>
-              <input [(ngModel)]='usuarioLogin.usuario' name="usuario"
+              <input [(ngModel)]='usuarioLogin.usuario' name=""
                 class="form-control bg-roxo text-pink"
                 type="email"
                 placeholder="Seu e-mail"
@@ -38,5 +41,5 @@
           </div>
         </div>
       </div>
-    </div>
+   
 
