--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light p-4 row border-bottom shadow-sm p-3 bg-white rounded" id="navbar">
+<nav class="navbar navbar-expand-lg p-4 row border-bottom shadow-sm p-3 bg-#8e8a8f" id="navbar">
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <img src="/assets/rede_tec-logo-removebg.png" alt="logo redetec" class="img-fluid rounded-circle ml-5" id="cabecalho-img">
