--- a/src/app/rodape/rodape.component.css
+++ b/src/app/rodape/rodape.component.css
@@ -30,10 +30,13 @@ ul.social-network li {
 }
 
 .btn-modal{
-  background-color: rgba(108, 51, 241, 0.5);
+  background-color: #8e8a8f;
   color: white;
   overflow-x: hidden;
   width: 100vw;
 }
 
+#link{
+color: white;
+}
 
