Alteração do botão Entrar

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -28,7 +28,7 @@ height: 100vh;
 }
 
 .btn-modal{
-    background-color: rgba(108, 51, 241, 0.7);
+    background-color: #8e8a8f;
     color: white;
 }
 
