Implementação do contato

--- a/src/app/inicio/inicio.component.css
+++ b/src/app/inicio/inicio.component.css
@@ -40,3 +40,11 @@ html{
     width: 100vw;
 }
 
+.form{
+    font-family: 'Sarala', sans-serif;
+    color: #756E6E;
+    font-weight: 400;
+    font-size: 18px;
+    text-decoration: none !important;  
+}
+
