--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -163,7 +163,7 @@
           />
           <div class="card-body">
             <p class="card-text">
-              Apoio no inicio da carreira, com profissionais da área ou de outras áreas.
+              Encontre alguém que seja mais experiente para ajudá-lo a desenvolver a sua carreira.
             </p>
 
           </div>
@@ -187,7 +187,59 @@
           </div>
       </div>
     </div>
+    <!--formulário-->
+  <div class="row  bg-light my-3 d-flex justify-content-center">
+    <div class="col-md-6 ">
+      <form>
+        <div class="form-group d-flex align-items-center">
+          <div class="form-group-container-fluid">
+            <h2 class="font-family-sarala d-flex align-items-center  ">Deixe sua mensagem</h2>
+          <ul>
+          </ul>
+         
 
+            
+            <div class="col-md-6 mx-4">
+              <form class="form-inline ">
+                <label class="sr-only" for="inlineFormInputName2">Nome</label>
+                <input type="text" class="form-control mb-3 mr-sm-3" id="inlineFormInputName2"  rows="6" placeholder="Nome">
+              
+                <label class="sr-only" for="inlineFormInputGroupUsername2">Email</label>
+                <div class="input-group mb-3 mr-sm-3">
+                  <div class="input-group-prepend">
+                   
+                  </div>
+                  <input type="text" class="form-control" id="inlineFormInputGroupUsername2" rows="6" placeholder="Email">
+                </div>
+                <div>
+                <label for="validationTextarea"></label>
+                <textarea class="form-control" id="validationTextarea" placeholder="Digite seu texto aqui"  rows="6" required></textarea>
+              </div>
+              <br>
+              <br>
+              
+                <div class="form-check mb-2 mr-sm-2">
+                  <input class="form-check-input" type="checkbox" id="inlineFormCheck">
+                  <label class="form-check-label" for="inlineFormCheck">
+                    Lembrar de mim
+                  </label>
+                </div>
+              
+                <button type="submit" class="btn btn-secondary mb-2 mr-sm-2">Enviar</button>
+              </form>
+              <br>
+              <br>
+            </div>
+           
+          
+          
+         
+     
+   
+       
+          
+    
+    <!--/formulario-->
     <!--Rodape-->
     <div class="col-md-12 m-0 p-0 page-footer font-small pt-4 btn-modal">
       <hr class="m-0 p-0" />
@@ -197,7 +249,7 @@
             
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-3">
         <div class="col-md-12">
             <p class="text-center">
             Todos os direitos reservados: RedeTec &copy;
@@ -205,4 +257,7 @@
         </div>
     </div>
     </footer>
+     <!--/Rodape-->
 </div>
+
+
