Ajustes da tela Início

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -45,8 +45,9 @@
         </ul>
         <div class="nav-item pl-3 d-flex justify-content-end ml-auto">
         <a class="font-weight-bold text-secondary fs-16" routerLink="/login"
-              >Entrar<img src="https://i.imgur.com/YzBTtCs.png" />
-              <i class="navbar-toggler-icon"></i>
+              >Entrar<img src="https://i.imgur.com/YzBTtCs.png" 
+              width="30pt" />
+              <i class="navbar-toggler-icon" ></i>
             </a>
           </div>
       </div>
@@ -61,7 +62,7 @@
           <div class="col-md-6">
             <div class="row d-flex justify-content-center">
               <div class="col-md-6 text-secondary">
-                <h1 class="fs-44">A sua Rede de ensino em programação!</h1>
+                <h1 class="fs-44">A sua Rede de ensino em programação</h1>
                 <h5 class="fs-15">
                   Mostramos que podemos ser muito mais humanos quando unimos
                   empatia e tecnologia
@@ -191,21 +192,28 @@
   <div class="row  bg-light my-3 d-flex justify-content-center">
     <div class="col-md-6 ">
       <form>
-        <div class="form-group d-flex align-items-center">
-          <div class="form-group-container-fluid">
-            <h2 class="font-family-sarala d-flex align-items-center  ">Deixe sua mensagem</h2>
+        <div class="form-group mt-3 mr-sm-3">
+          <div class="form-group-container-fluid d-flex align-items-left">
+           
           <ul>
           </ul>
+          <div class="container-fluid">
+            <img d-flex justify-content-right
+          src="https://i.imgur.com/xsljp91.png"
+          class="card-img-top"
+          alt="mensagem"
+          width="200vh"
+          height="250vh"
+          />
+          </div>
          
-
-            
             <div class="col-md-6 mx-4">
               <form class="form-inline ">
                 <label class="sr-only" for="inlineFormInputName2">Nome</label>
-                <input type="text" class="form-control mb-3 mr-sm-3" id="inlineFormInputName2"  rows="6" placeholder="Nome">
+                <input type="text" class="form-control mt-3 mr-sm-3 mb-3" id="inlineFormInputName2"  rows="6" placeholder="Nome">
               
                 <label class="sr-only" for="inlineFormInputGroupUsername2">Email</label>
-                <div class="input-group mb-3 mr-sm-3">
+                <div class="input-group mb-2 mr-sm-2">
                   <div class="input-group-prepend">
                    
                   </div>
@@ -213,7 +221,7 @@
                 </div>
                 <div>
                 <label for="validationTextarea"></label>
-                <textarea class="form-control" id="validationTextarea" placeholder="Digite seu texto aqui"  rows="6" required></textarea>
+                <textarea class="form-control mb-3"  id="validationTextarea" placeholder="Digite seu texto aqui"  rows="6" required></textarea>
               </div>
               <br>
               <br>
@@ -226,38 +234,46 @@
                 </div>
               
                 <button type="submit" class="btn btn-secondary mb-2 mr-sm-2">Enviar</button>
-              </form>
-              <br>
-              <br>
-            </div>
-           
-          
-          
-         
-     
-   
-       
-          
-    
+                <div class="row">
+                  <div class="col-md-12 m-0 p-0 page-footer font-small pt-4 btn-modal">
+                    <hr class="m-0 p-0" />
+                  <footer class="">
+                      <div class="row mb-3">
+                      <div class="col-md-12 d-flex justify-content-center align-items-center">
+                          
+                      </div>
+                  </div>
+                  <ul>
+
+                  </ul>
+                  <br>
+
     <!--/formulario-->
-    <!--Rodape-->
-    <div class="col-md-12 m-0 p-0 page-footer font-small pt-4 btn-modal">
-      <hr class="m-0 p-0" />
-    <footer class="">
-        <div class="row mb-3">
-        <div class="col-md-12 d-flex justify-content-center align-items-center">
-            
-        </div>
+     
+ <!--Rodape-->
+ <div class="col-md-12 m-0 p-0 page-footer font-small pt-4 btn-modal">
+  <hr class="m-0 p-0" />
+<footer class="">
+    <div class="row mb-3">
+    <div class="col-md-12 d-flex justify-content-center align-items-center">
+        
     </div>
-    <div class="row mt-3">
-        <div class="col-md-12">
-            <p class="text-center">
-            Todos os direitos reservados: RedeTec &copy;
-            </p>
-        </div>
-    </div>
-    </footer>
-     <!--/Rodape-->
 </div>
+<div class="row">
+    <div class="col-md-12">
+        <p class="text-center">
+        Todos os direitos reservados: RedeTec &copy;
+        </p>
+    </div>
+</div>
+</footer>
+</div>
+
+
+    
+     <!--/Rodape-->
+
+
+
 
 
